<resources>
    <string name="app_name">College Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="gpa_calculator">GPA Calculator</string>
    <string name="menu_gpa_calculator">GPA Calculator</string>
    <string name="menu_todo_list">To-Do List</string>
    <string name="menu_classes_schedule">Classes Schedule</string>
    <string name="menu_exam_countdown">Exam Countdown</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_pomodoro_timer">Pomodoro Timer</string>
    <string name="sell">Sell</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="course_name_req">Course Name <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Item Price <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <string name="credit">Credit:</string>
    <string name="credits">Credits</string>
    <string name="gpa">GPA =</string>
</resources>