<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pangolin.collegedashboard.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_exam_countdown"
        android:name="com.pangolin.collegedashboard.ui.examcountdown.ExamCountdownFragment"
        android:label="@string/menu_exam_countdown"
        tools:layout="@layout/fragment_exam_countdown" />

    <fragment
        android:id="@+id/nav_todo"
        android:name="com.pangolin.collegedashboard.ui.todo.ToDoFragment"
        android:label="@string/menu_todo_list"
        tools:layout="@layout/fragment_todo" />
    <fragment
        android:id="@+id/nav_classes_schedule"
        android:name="com.pangolin.collegedashboard.ui.classesschedule.ClassScheduleFragment"
        android:label="@string/menu_classes_schedule"
        tools:layout="@layout/fragment_classes_schedule" />
    <fragment
        android:id="@+id/nav_notes"
        android:name="com.pangolin.collegedashboard.ui.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />
    <fragment
        android:id="@+id/nav_pomodoro"
        android:name="com.pangolin.collegedashboard.ui.pomodoro.PomodoroFragment"
        android:label="@string/menu_pomodoro_timer"
        tools:layout="@layout/fragment_pomodoro" />
    <fragment
        android:id="@+id/nav_gpa_calculator"
        android:name="com.pangolin.collegedashboard.ui.gpacalculator.CourseListFragment"
        android:label="@string/menu_gpa_calculator"
        tools:layout="@layout/fragment_gpa_calculator_course_list" >
        <action
            android:id="@+id/action_nav_gpa_calculator_to_addCourseFragment"
            app:destination="@id/addCourseFragment" />
        <action
            android:id="@+id/action_courseListFragment_to_courseDetailFragment"
            app:destination="@id/courseDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/courseDetailFragment"
        android:name="com.pangolin.collegedashboard.ui.gpacalculator.CourseDetailFragment"
        android:label="Course Detail"
        tools:layout="@layout/fragment_gpa_calculator_course_detail" >
        <argument
            android:name="course_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_courseDetailFragment_to_addCourseFragment"
            app:destination="@id/addCourseFragment" />
    </fragment>
    <fragment
        android:id="@+id/addCourseFragment"
        android:name="com.pangolin.collegedashboard.ui.gpacalculator.AddCourseFragment"
        android:label="Add New Course"
        tools:layout="@layout/fragment_gpa_calculator_add_course" >
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="course_id"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_addCourseFragment_to_courseListFragment"
            app:destination="@id/nav_gpa_calculator"
            app:popUpTo="@id/nav_gpa_calculator"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>